--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,64 +11,75 @@
     width: 100%;
     height: 100%;
     background-color: $gray8;
-    opacity: 0.5;
+    opacity: 0.7;
   }
 
   .or-modal {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding-bottom: 20px;
     background-color: $white;
-    border: 1px solid $gray3;
-    border-radius: 3px;
     z-index: 99;
-
-    .or-modal-title-wrapper {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 15px;
-      border-bottom: 1px solid $gray3;
-
-      .or-modal-title {
-        font-size: 18px;
-        color: $gray4;
-      }
-
-      svg {
-        cursor: pointer;
-      }
-    }
 
     .or-modal-content {
       padding: 20px 40px;
     }
+  }
 
-    .or-modal-footer {
-      display: flex;
-      padding: 20px 40px;
+  &.or-modal-position-center {
+    .or-modal {
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 3px;
 
-      .or-btn + .or-btn {
-        margin-left: 10px;
+      .or-modal-content {
+        padding: 20px 40px;
       }
     }
   }
 
+  &.or-modal-position-right {
+    .or-modal {
+      top: 0;
+      right: 0;
+      height: 100vh;
+      overflow: scroll;
+    }
+  }
+
+  &.or-modal-position-left {
+    .or-modal {
+      top: 0;
+      left: 0;
+      height: 100vh;
+      overflow: scroll;
+    }
+  }
+
+  &.or-modal-position-bottom {
+    .or-modal {
+      top: 0;
+      left: 0;
+      width: 100vh;
+    }
+  }
 }
 
 .or-modal-mask-transition-enter {
   opacity: 0.01;
 }
+
 .or-modal-mask-transition-enter-active {
   opacity: 1;
   transition: all 300ms ease-out;
 }
+
 .or-modal-mask-transition-exit {
   opacity: 1;
 }
+
 .or-modal-mask-transition-exit-active {
   opacity: 0.01;
   transition: all 300ms ease-out;
 }
+
+
