docs: move the pictures from the public folder to the stories folder

--- a/examples/stories/styles.scss
+++ b/examples/stories/styles.scss
@@ -3,7 +3,7 @@
 }
 .modal-center {
   .or-modal {
-    background-image: url('../public/images/modal_bg2.jpg');
+    background-image: url('./assets/modal_bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
